Fixed footer and image alignment; also, added glowing outline for images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,41 @@
   font-family: Arial, Helvetica, sans-serif;
 } 
 
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1%;
+  color: #fff;
+}
+
+header h1 {
+  font-size: 300%;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  /* font-size: 45pt; */
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  min-width: 275px;
+  position: relative;
+  top:38%;
+  
+}
+
+nav a {
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+  vertical-align: bottom;
+  
+}
+
+nav a:hover {
+  color: grey;
+}
+
 .top-header {
   display: flex;
   padding: 0px;
@@ -24,13 +59,13 @@
   margin: auto;
 }
 
-header h1 {
+/* header h1 {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 45pt;
   position: absolute;
   left:25%;
 
-}
+} */
 
 header img {
   border-radius: 40%;
@@ -38,21 +73,21 @@ header img {
   height: 90%;
   position: relative;
   left: 5px;
-  top: 10px;
+  top: 2px;
 }
 
-nav {
+/* nav {
   display: flex;
   /* rgb(58, 57, 57); */
-  background-color: black;
+  /* background-color: black;
   position: relative;
   width: auto;
   height: 20px;
   top: 80%;
   left: 60%
-}
+} */
 
-nav a {
+/* nav a {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 10pt;
   font-weight: bold;
@@ -61,7 +96,7 @@ nav a {
   padding: 14px 20px;
   text-decoration: none;
   text-align: center;
-}
+} */
 
 main {
   display: flex;
@@ -144,6 +179,14 @@ aside div {
   left:40%;
   
 }
+.divider2 {
+  display: block;
+  justify-content: center;
+  position: relative;
+  left:0%;
+  top:20%
+  
+}
 .dot {
   height: 15px;
   width: 15px;
@@ -185,45 +228,82 @@ aside div {
 
 .big-card img {
   border-style: solid;
-  border-width: 1px;
+  border-width: 2px;
   height: 350px;
   width: auto;
+  /* transition: all 0.5s ease-in-out; */
+  opacity: 0.7;
+}
+
+.big-card img:hover{
+  box-shadow: inset 0px 0px 8px darkblue, 0 0 15px darkblue;
+  opacity: 1.0;
 }
 
 /* Added rotation, box-shadow, border-radius */
 .card {
   /* flex: 0 0 100px; */
-  margin: 15px;
+  margin: 10px;
+  /* padding: 10px; */
 }
 
 /* Added border-radius to match the card */
 .card header {
   /* border-radius: 50px 50px 0px 0px;
   padding: 20px; */
+  
   background-color:  #b9c6ae;
+  /* font-style: italic; */
   color: black;
   border-style: solid;
   border-width: 1px;
   border-color: black;
   position: relative;
-  top: 170px;
+  top: 165px;
+  width: 165px;
 }
 
 
 .card img {
   border-style: solid;
   border-width: 1px;
-  height: auto;
-  width: 300px;
+  height: 165px;
+  width: auto;
+  opacity: 0.7;
+  /* transition: all 0.5s ease-in-out; */
+}
+
+.card img:hover{
+  box-shadow: inset 0px 0px 8px darkblue, 0 0 15px darkblue;
+  opacity: 1.0;
+}
+
+/* .code-card .card-header {
+  border-radius: 8px;
+  transition: all 0.5s ease-in-out;
+}
+
+.code-card:hover,
+.code-card:hover .card-header {
+  box-shadow: inset 0px 0px 8px rgba(232, 102, 236, 1), 0 0 15px rgba(232, 102, 236, 1);
+} */
+
+#reactj {
+  height: 165px;
+  width: auto;
+
 }
 
 footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px;
+  color: #fff;
   width: 100%;
   bottom: 0;
-  padding: 20px;
   text-align: center;
-  background: #13293d;
-  color: #fff;
+  background: linear-gradient(var(--dark), black);
   margin-top: auto;
 }
 
